[package]
authors = ["Matt Vertescher <mvertescher@gmail.com>"]
categories = ["no-std"]
description = "Serial Line Internet Protocol (SLIP) API."
documentation = "https://docs.rs/serial-line-ip"
homepage = "https://github.com/mvertescher/serial-line-ip-rs"
license = "MIT OR Apache-2.0"
name = "serial-line-ip"
readme = "README.md"
repository = "https://github.com/mvertescher/serial-line-ip-rs"
version = "0.3.0"
